@@ -23,17 +23,17 @@ import org.apache.tools.ant.filters.ReplaceTokens
 /**
  * @author <a href="mailto:franz.wilhelmstoetter@gmail.com">Franz Wilhelmstötter</a>
  * @since 1.2
- * @version 6.1
+ * @version 6.3
  */
 plugins {
 	base
-	id("me.champeau.jmh") version "0.6.3" apply false
+	id("me.champeau.jmh") version "0.6.6" apply false
 }
 
 rootProject.version = Jenetics.VERSION
 
 tasks.named<Wrapper>("wrapper") {
-	gradleVersion = "7.0"
+	gradleVersion = "7.3"
 	distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -53,10 +53,12 @@ allprojects {
 	}
 
 	configurations.all {
-		resolutionStrategy.failOnVersionConflict()
-		resolutionStrategy.force(*Libs.All)
+		resolutionStrategy.preferProjectModules()
 	}
+
 }
+
+apply("./gradle/alljavadoc.gradle")
 
 /**
  * Project configuration *after* the projects has been evaluated.
@@ -66,7 +68,7 @@ gradle.projectsEvaluated {
 		val project = this
 
 		val xlint = listOf(
-			//"preview",
+			"preview",
 			"cast",
 			"classfile",
 			"deprecation",
@@ -84,23 +86,21 @@ gradle.projectsEvaluated {
 
 		tasks.withType<JavaCompile> {
 			options.compilerArgs.add("-Xlint:$xlint")
-			options.compilerArgs.add("--enable-preview")
 		}
 
 		tasks.withType<Test> {
 			useTestNG()
-			jvmArgs("--enable-preview")
 		}
 
 		plugins.withType<JavaPlugin> {
-			configure<JavaPluginConvention> {
-				sourceCompatibility = JavaVersion.VERSION_16
+			configure<JavaPluginExtension> {
+				sourceCompatibility = JavaVersion.VERSION_17
 				targetCompatibility = JavaVersion.current()
 			}
 
 			setupJava(project)
 			setupTestReporting(project)
-			setupJavadoc(project)
+			setupJavadoc(project, "")
 		}
 
 		if (plugins.hasPlugin("maven-publish")) {
@@ -108,6 +108,7 @@ gradle.projectsEvaluated {
 		}
 	}
 
+	setupJavadoc(rootProject, "all")
 }
 
 /**
@@ -151,7 +152,7 @@ fun setupTestReporting(project: Project) {
 	project.apply(plugin = "jacoco")
 
 	project.configure<JacocoPluginExtension> {
-		toolVersion = "0.8.6"
+		toolVersion = "0.8.7"
 	}
 
 	project.tasks {
@@ -159,9 +160,9 @@ fun setupTestReporting(project: Project) {
 			dependsOn("test")
 
 			reports {
-				html.isEnabled = true
-				xml.isEnabled = true
-				csv.isEnabled = true
+				html.required.set(true)
+				xml.required.set(true)
+				csv.required.set(true)
 			}
 		}
 
@@ -174,11 +175,9 @@ fun setupTestReporting(project: Project) {
 /**
  * Setup of the projects Javadoc.
  */
-fun setupJavadoc(project: Project) {
+fun setupJavadoc(project: Project, taskName: String) {
 	project.tasks.withType<Javadoc> {
 		val doclet = options as StandardJavadocDocletOptions
-		doclet.addBooleanOption("-enable-preview", true)
-		doclet.addStringOption("-release", "16")
 		doclet.addBooleanOption("Xdoclint:accessibility,html,reference,syntax", true)
 
 		exclude("**/internal/**")
@@ -189,7 +188,7 @@ fun setupJavadoc(project: Project) {
 		doclet.charSet = "UTF-8"
 		doclet.linkSource(true)
 		doclet.linksOffline(
-				"https://docs.oracle.com/en/java/javase/16/docs/api",
+				"https://docs.oracle.com/en/java/javase/17/docs/api/",
 				"${project.rootDir}/buildSrc/resources/javadoc/java.se"
 			)
 		doclet.windowTitle = "Jenetics ${project.version}"
@@ -204,7 +203,7 @@ fun setupJavadoc(project: Project) {
 				"implNote:a:Implementation Note:"
 			)
 
-		doclet.group("Core API", "io.jeneics", "io.jenetics.engine")
+		doclet.group("Core API", "io.jenetics", "io.jenetics.engine")
 		doclet.group("Utilities", "io.jenetics.util", "io.jenetics.stat")
 
 		doLast {
@@ -218,33 +217,36 @@ fun setupJavadoc(project: Project) {
 		}
 	}
 
-	val javadoc = project.tasks.findByName("javadoc") as Javadoc?
+	val javadoc = project.tasks.findByName("${taskName}javadoc") as Javadoc?
 	if (javadoc != null) {
-		project.tasks.register<io.jenetics.gradle.ColorizerTask>("colorizer") {
+		project.tasks.register<io.jenetics.gradle.ColorizerTask>("${taskName}colorizer") {
 			directory = javadoc.destinationDir!!
 		}
 
-		project.tasks.register("java2html") {
+		project.tasks.register("${taskName}java2html") {
 			doLast {
-				project.javaexec {
-					main = "de.java2html.Java2Html"
-					args = listOf(
-						"-srcdir", "src/main/java",
-						"-targetdir", "${javadoc.destinationDir}/src-html"
-					)
-					classpath = files("${project.rootDir}/buildSrc/lib/java2html.jar")
+				val srcdir = file("${project.projectDir}/src/main/java")
+
+				if (srcdir.isDirectory) {
+					project.javaexec {
+						mainClass.set("de.java2html.Java2Html")
+						args = listOf(
+							"-srcdir", srcdir.toString(),
+							"-targetdir", "${javadoc.destinationDir}/src-html"
+						)
+						classpath = files("${project.rootDir}/buildSrc/lib/java2html.jar")
+					}
 				}
 			}
 		}
 
 		javadoc.doLast {
-			val colorizer = project.tasks.findByName("colorizer")
+			val colorizer = project.tasks.findByName("${taskName}colorizer")
 			colorizer?.actions?.forEach {
 				it.execute(colorizer)
 			}
 
-
-			val java2html = project.tasks.findByName("java2html")
+			val java2html = project.tasks.findByName("${taskName}java2html")
 			java2html?.actions?.forEach {
 				it.execute(java2html)
 			}
@@ -256,7 +258,7 @@ fun setupJavadoc(project: Project) {
  * The Java compiler XLint flags.
  */
 fun xlint(): String {
-	// See https://docs.oracle.com/en/java/javase/16/docs/specs/man/javac.html
+	// See https://docs.oracle.com/en/java/javase/17/docs/specs/man/javac.html
 	return listOf(
 		"cast",
 		"classfile",
@@ -377,7 +379,8 @@ fun setupPublishing(project: Project) {
 
 val exportDir = file("${rootProject.buildDir}/package/${identifier}")
 
-tasks.register("assemblePkg") {
+val assemblePkg = "assemblePkg"
+tasks.register(assemblePkg) {
 	val task = this
 	subprojects { task.dependsOn(tasks.build) }
 
@@ -445,6 +448,7 @@ tasks.register("assemblePkg") {
 		}
 
 		modules.forEach { copyJavadoc(it, exportDir) }
+		copyAllJavadoc(exportDir)
 		modules.forEach { copyTestReports(it, exportDir) }
 
 		// Copy the User's Manual.
@@ -455,6 +459,10 @@ tasks.register("assemblePkg") {
 			into(exportDir)
 		}
 	}
+}
+
+tasks.named(assemblePkg) {
+	dependsOn("build", "alljavadoc")
 }
 
 fun copyJavadoc(name: String, exportDir: File) {
@@ -471,9 +479,24 @@ fun copyJavadoc(name: String, exportDir: File) {
 	}
 }
 
+fun copyAllJavadoc(exportDir: File) {
+	copy {
+		from("${rootDir}/build/docs/alljavadoc") {
+			filter(
+				ReplaceTokens::class, "tokens" to mapOf(
+					"__identifier__" to identifier,
+					"__year__" to Env.COPYRIGHT_YEAR
+				)
+			)
+		}
+		into("${exportDir}/javadoc/combined")
+	}
+}
+
 fun copyTestReports(name: String, exportDir: File) {
 	copy {
 		from("${name}/build/reports") {
+			exclude("**/*.gif")
 			filter(
 				ReplaceTokens::class, "tokens" to mapOf(
 					"__identifier__" to identifier,
@@ -483,10 +506,17 @@ fun copyTestReports(name: String, exportDir: File) {
 		}
 		into("${exportDir}/reports/${name}")
 	}
+	copy {
+		from("${name}/build/reports") {
+			include("**/*.gif")
+		}
+		into("${exportDir}/reports/${name}")
+	}
 }
 
-tasks.register<Zip>("pkgZip") {
-	dependsOn("assemblePkg")
+val pkgZip = "pkgZip"
+tasks.register<Zip>(pkgZip) {
+	dependsOn(assemblePkg)
 
 	group ="archive"
 	description = "Zips the project package"
